Add pagination feature to organizations and events index page

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 public/uploads
 # sensiteve data
 trash/
+git_workflow.md
 
 # See https://help.github.com/articles/ignoring-files for more about ignoring files.
 #
